[refactor]: Atualizcao na versao de compilacao do java do 24 >> 21. Agora rodando em linux e windos.